--- a/login-reg.html
+++ b/login-reg.html
@@ -11,7 +11,7 @@
   <script src="https://kit.fontawesome.com/0e3065f827.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="page-recipes">
+<body class="page-login-reg">
   <header>
     <div class="page-header-top container text-center text-md-left" <a href="index.html"><img src="./images/logo.jpg"
         alt="StudentEat" /></a>
@@ -32,7 +32,7 @@
               <a class="nav-link" href="categories.html">Categories</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="login-reg.html">Login / register</a>
+                <a class="nav-link" href="login-reg.html">Login / register</a>
             </li>
           </ul>
           <form action="search.html" method="get" class="form-inline my-2 my-lg-0">
@@ -45,7 +45,7 @@
   </header>
   <div class="container">
 
-    <h1 class="mb-4 pb-2">Lunch recipes</h1>
+    <h1 class="mb-4 pb-2">Login or Register</h1>
 
 
   </div>
