--- a/recipe.html
+++ b/recipe.html
@@ -11,7 +11,7 @@
   <script src="https://kit.fontawesome.com/0e3065f827.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="page-recipes">
+<body class="page-recipe">
   <header>
     <div class="page-header-top container text-center text-md-left" <a href="index.html"><img src="./images/logo.jpg"
         alt="StudentEat" /></a>
@@ -45,7 +45,7 @@
   </header>
   <div class="container">
 
-    <h1 class="mb-4 pb-2">Lunch recipes</h1>
+    <h1 class="mb-4 pb-2">Crunchy Salad</h1>
 
 
   </div>
