--- a/categories.html
+++ b/categories.html
@@ -1,11 +1,289 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quick and affordable student receipies - StudentEat</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Quick and affordable student recipies - StudentEat</title>
+  <link href="./node_modules/@glidejs/glide/dist/css/glide.core.min.css" rel="stylesheet">
+  <link href="./node_modules/@glidejs/glide/dist/css/glide.theme.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/styles.css">
+  <script src="https://kit.fontawesome.com/0e3065f827.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    
+
+<body class="page-categories">
+  <header>
+    <div class="page-header-top container text-center text-md-left" <a href="index.html"><img src="./images/logo.jpg"
+        alt="StudentEat" /></a>
+    </div>
+    <nav class="navbar navbar-expand-lg mb-4">
+      <div class="container">
+        <!-- <a class="navbar-brand" href="index.html">StudentEat</a> -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="categories.html">Categories</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="login-reg.html">Login / register</a>
+            </li>
+          </ul>
+          <form action="search.html" method="get" class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <div class="container">
+
+    <h1 class="mb-4 pb-2">Recipe Categories</h1>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipes.html"></a>
+          </div>
+          <a href="recipes.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+
+    </div>
+
+    <footer class="container mt-4 text-center">
+      <p>&copy;StudentEat - Created for educational purposes</p>
+    </footer>
+
+    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="./node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./js/indexPage.js"></script>
 </body>
+
+</html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Quick and affordable student receipies - StudentEat</title>
+</head>
+
+<body>
+
+</body>
+
 </html>
