--- a/recipes.html
+++ b/recipes.html
@@ -9,6 +9,7 @@
   <link href="./node_modules/@glidejs/glide/dist/css/glide.theme.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <script src="https://kit.fontawesome.com/0e3065f827.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,400&display=swap" rel="stylesheet">
 </head>
 
 <body class="page-recipes">
@@ -46,6 +47,222 @@
   <div class="container">
 
     <h1 class="mb-4 pb-2">Lunch recipes</h1>
+    <p>Browse our wide range of lunch recipes below.</p>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="recipe-card">
+          <div class="recipe-card-image" style="background-image: url('./recipe-images/burger.jpg');">
+            <a href="recipe.html"></a>
+          </div>
+          <a href="recipe.html">
+            <h3>Lunch Recipes</h3>
+          </a>
+        </div>
+      </div>
+
+    </div>
 
 
   </div>
@@ -53,10 +270,9 @@
   <footer class="container mt-4 text-center">
     <p>&copy;StudentEat - Created for educational purposes</p>
   </footer>
-
-  <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="./js/scripts-vendor.min.js"></script>
+  <script src="./js/scripts.min.js"></script>
   <script src="./node_modules/popper.js/dist/umd/popper.min.js"></script>
-  <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="./js/indexPage.js"></script>
 </body>
 </html>
