--- a/categories.html
+++ b/categories.html
@@ -265,10 +265,9 @@
     <footer class="container mt-4 text-center">
       <p>&copy;StudentEat - Created for educational purposes</p>
     </footer>
-
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="./js/scripts-vendor.min.js"></script>
+    <script src="./js/scripts.min.js"></script>
     <script src="./node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./js/indexPage.js"></script>
 </body>
 
