--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="./node_modules/@glidejs/glide/dist/css/glide.theme.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <script src="https://kit.fontawesome.com/0e3065f827.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,400&display=swap" rel="stylesheet">
 </head>
 
 <body class="page-home">
@@ -119,30 +120,14 @@
   <footer class="container mt-4 text-center">
     <p>&copy;StudentEat - Created for educational purposes</p>
   </footer>
-
-  <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="./node_modules/popper.js/dist/umd/popper.min.js"></script>
-  <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="./js/indexPage.js"></script>
-  <script src="./node_modules/@glidejs/glide/dist/glide.min.js"></script>
+  <script src="./js/scripts-vendor.min.js"></script>
+  <script src="./js/scripts.min.js"></script>
   <script>
-    new Glide('.glide',
-      {
-        type: 'carousel', perView: 4, breakpoints: {
-          1200: {
-            perView: 4
-          },
-          992: {
-            perView: 3
-          },
-          768: {
-            perView: 2
-          },
-          576: {
-            perView: 1
-          }
-        }
-      }).mount()
+    home.init();
   </script>
+
+  <script src="./node_modules/popper.js/dist/umd/popper.min.js"></script>
+  <script src="./js/indexPage.js"></script>
+
 </body>
 </html>
