--- a/login-reg.html
+++ b/login-reg.html
@@ -9,9 +9,12 @@
   <link href="./node_modules/@glidejs/glide/dist/css/glide.theme.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <script src="https://kit.fontawesome.com/0e3065f827.js" crossorigin="anonymous"></script>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,400&display=swap"
+    rel="stylesheet">
 </head>
 
-<body class="page-login-reg">
+<body id="page-login-reg">
   <header>
     <div class="page-header-top container text-center text-md-left" <a href="index.html"><img src="./images/logo.jpg"
         alt="StudentEat" /></a>
@@ -32,7 +35,7 @@
               <a class="nav-link" href="categories.html">Categories</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="login-reg.html">Login / register</a>
+              <a class="nav-link" href="login-reg.html">Login / register</a>
             </li>
           </ul>
           <form action="search.html" method="get" class="form-inline my-2 my-lg-0">
@@ -48,15 +51,57 @@
     <h1 class="mb-4 pb-2">Login or Register</h1>
 
 
+    <div class="row">
+      <div class="col-lg-6">
+        <form id="registration-form" method="post" action="">
+          <div class="form-group">
+            <label for="reg_email">Email address</label>
+            <input type="email" class="form-control" id="reg_email" name="email">
+          </div>
+          <div class="form-group">
+            <label for="reg_password">Password</label>
+            <input type="password" class="form-control" id="reg_password" name="password">
+          </div>
+          <div class="form-group">
+            <label for="reg_password_confirm">Confirm Password</label>
+            <input type="password" class="form-control" id="reg_password_confirm" name="password_confirm">
+          </div>
+          <button type="submit" class="btn btn-primary">Register</button>
+
+        </form>
+
+      </div>
+      <div class="col-lg-6">
+        <form id="login-form" method="post" action="">
+          <div class="form-group">
+            <label for="login_email">Email address</label>
+            <input type="email" class="form-control" id="login_email" name="email">
+          </div>
+          <div class="form-group">
+            <label for="login_password">Password</label>
+            <input type="password" class="form-control" id="login_password" name="password">
+          </div>
+          <button type="submit" class="btn btn-studenteat">Login</button>
+
+        </form>
+
+      </div>
+    </div>
+
+
+
+
+
+
   </div>
 
   <footer class="container mt-4 text-center">
     <p>&copy;StudentEat - Created for educational purposes</p>
   </footer>
-
-  <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="./js/scripts-vendor.min.js"></script>
+  <script src="./js/scripts.min.js"></script>
   <script src="./node_modules/popper.js/dist/umd/popper.min.js"></script>
-  <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="./js/indexPage.js"></script>
 </body>
+
 </html>
